package com.kkbnart.minilang.exception;

public class SchemeException extends Exception {

  public SchemeException(String string) {
    super(string);
  }

  /** */
  private static final long serialVersionUID = -6824772124069027784L;
}
