package com.kkbnart.minilang.exception;

public class SchemeOutputException extends SchemeException {

  /** */
  private static final long serialVersionUID = -3313498301925847098L;

  public SchemeOutputException(String string) {
    super(string);
    // TODO Auto-generated constructor stub
  }
}
