package com.kkbnart.minilang.exception;

public class SchemeParserException extends SchemeException {

  /** */
  private static final long serialVersionUID = -3316030464391714866L;
  
  public SchemeParserException(String string) {
    super(string);
    // TODO Auto-generated constructor stub
  }
  
}
