package com.kkbnart.minilang.order.sheme;

public class EndOrder implements SchemeOrder {

}
