package com.kkbnart.minilang.order.sheme;

public class NullOrder implements SchemeOrder {
}
