package com.kkbnart.minilang.order.sheme;

import com.kkbnart.minilang.order.Order;

public interface SchemeOrder extends Order {
}